@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.12
 #
 
+2005-12-15 10:16:39 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-119
+
+    Summary:
+      catalog, fix query docstring (#242)
+    Revision:
+      itools--main--0.12--patch-119
+
+
+    modified files:
+     Changelog catalog/Query.py
+
+
 2005-12-15 10:13:10 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-118
 
     Summary:
